Bug 398144 - [CBI] eclipse-junit-tests should be (near) identical between branches